fixed #11 - color contrast falling for links
RGAA 3.4.1  AAA

--- a/contrast-finder-webapp/src/main/webapp/Css/color-finder.css
+++ b/contrast-finder-webapp/src/main/webapp/Css/color-finder.css
@@ -4,7 +4,8 @@ body {
 }
 
 a {
-    color : #3173BD;
+    color : #3173BD;   /* AA  */
+    color : #0A52A4;   /* AAA */
 }
 
 /* Bootstrap override */ 
